--- a/conFusion/css/styles.css
+++ b/conFusion/css/styles.css
@@ -1,24 +1,32 @@
-.header {
-  background-color: #b74bff;
-  margin: 0px auto;
-  padding: 40px 0px 40px 0px;
-  color: white;
-  font-weight: bold;
-}
 .row-header {
   margin: 0px auto;
-  padding: 0px;
+  padding: 0px 0px;
 }
+
+.row-content {
+  margin: 0px auto;
+  padding: 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
+}
+
 .footer {
   background-color: #d1c4e9;
   margin: 0px auto;
-  padding: 20px 0px 20px 0px;
+  padding: 20px 0px;
 }
-.row-content {
+
+.jumbotron {
   margin: 0px auto;
-  padding: 50px 0px 50px 0px;
-  border-bottom: 1px ridge;
-  min-height: 400px;
+  padding: 70px 30px;
+  background: #9575cd;
+  color: floralwhite;
+}
+
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
 }
 
 body {
@@ -36,15 +44,16 @@ body {
   border-bottom: 1px solid #ddd;
   padding: 10px;
 }
+
 .carousel {
   background: #512da8;
 }
 
-.carousel-item {
+.carousel .carousel-item {
   height: 300px;
 }
 
-.carousel-item img {
+.carousel .carousel-item img {
   position: absolute;
   top: 0;
   left: 0;
