--- a/conFusion/css/styles.css
+++ b/conFusion/css/styles.css
@@ -9,14 +9,14 @@
   min-height: 400px; }
 
 .footer {
-  background-color: #D1C4E9;
+  background-color: #d1c4e9;
   margin: 0px auto;
   padding: 20px 0px; }
 
 .jumbotron {
   margin: 0px auto;
   padding: 70px 30px;
-  background: #9575CD;
+  background: #9575cd;
   color: floralwhite; }
 
 address {
@@ -29,7 +29,7 @@ body {
   z-index: 0; }
 
 .navbar-dark {
-  background-color: #512DA8; }
+  background-color: #512da8; }
 
 .tab-content {
   border-left: 1px solid #ddd;
@@ -38,7 +38,7 @@ body {
   padding: 10px; }
 
 .carousel {
-  background: #512DA8; }
+  background: #512da8; }
   .carousel .carousel-item {
     height: 300px; }
     .carousel .carousel-item img {
@@ -46,6 +46,18 @@ body {
       top: 0;
       left: 0;
       min-height: 300px; }
+
+.modal .modal-header {
+  background: #512da8; }
+
+.modal .modal-body {
+  background: #d1c4e9; }
+
+.modal .close {
+  color: #fffaf0; }
+
+.modal .modal-title {
+  color: white; }
 
 #carouselButton {
   right: 0px;
